added the 2nd b.g with dif prop and posit end res7

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,10 +57,17 @@ body{
   }
   
   #content{
+    
     width: 80%;
     padding: 1rem;
     margin: 1rem;
+    background-image: url("/Images/pic-fond.jpg");
+    background-repeat: repeat repeat;
+    background-color: #f15c5c;
+    background-position-x: right center; 
   }
+    
+
   h1{
     font-size: 30px;
   }
