--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,14 +11,14 @@ body{
   header {
     text-align: center;
     background-image: url("/Images/Kharla.jpg");
-    color: rgb(226, 235, 235);
+    background-color: rgb(226, 161, 218);
   }
   #backgroundPicture{
     display: block;
     height: 80%;
     width: 100%;
     background-image:url("/Images/kharla.jpg");
-    background-color: aquamarine;
+    
     background-size:100%;
 
   }
@@ -26,7 +26,6 @@ body{
   #heading {
     font-family: sans-serif;
   }
-
   #headshot{
     border: 10px solid rgb(202, 104, 38);
     border-radius: 50%;
@@ -54,6 +53,7 @@ body{
     color: rgb(229, 238, 238);
     padding: 1rem;
   
+    flex: 8;
   }
   
   #content{
@@ -74,39 +74,15 @@ body{
     
   /* ID SECTION */
   .icons{
-    width: 100% ;
+    width: 40px ;
     height: 50px ;
   
   }
 
-  @media only screen and (max-width:768px) {
-    #headshot{
-      
-      display: block;
-     
-    }
-    
-    .main{
-      display: block; 
-      flex-direction: row;
-      justify-content: space-between;
-      
-    }
+  
 
-    #sidebar {
-      
-      width: 100%;
-      text-align: center;
-      color: rgb(229, 238, 238);
-      padding: 1rem;
-      display: block; 
-    }
 
-    #content{
-    
-      width:100%;
-      display: block;
-    }
+ 
 
    
-  }
+
